# fluidsym

./: .gitignore  CMakeLists.txt  Cargo.toml
src/: app.rs  fluid.c  fluid.cpp  fluid.h  fluid.hpp  grid.c  grid.h  lib.rs  main.c  main.cpp  main.rs  render.c  render.cpp  render.h  render.hpp
src/renderer/: grid.rs  mod.rs  shader.wgsl  state.rs
